[package]
name = "roniker"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/fossable/roniker"
description = "Create custom LSPs for ron configurations at compile time."

[dependencies]
anyhow = "1.0"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
ron = "0.12"
tree-sitter = "0.25.10"
ron-lsp-tree-sitter = { version = "0.1.0" }

# For Rust type analysis
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

serde_json = "1.0"
serde = "1.0"

[features]
# Analyze RON structs
analyze = []

# Serve LSP
lsp = []
