[package]
authors = ["Tyler Cook"]
description = "Create custom LSPs for ron configurations at compile time."
edition = "2024"
license = "MIT"
name = "roniker"
repository = "https://github.com/fossable/roniker"
version = "0.1.0"

[dependencies]
anyhow = "1"
ron = "0.12"
serde = { version = "1", features = ["derive"] }

# For LSP server
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tree-sitter = { version = "0.25.10", optional = true }
ron-lsp-tree-sitter = { version = "0.1.0", optional = true }

# For type analysis
syn = { version = "2", features = [
  "full",
  "parsing",
  "extra-traits",
], optional = true }
quote = { version = "1", optional = true }
proc-macro2 = { version = "1", features = ["span-locations"], optional = true }

[dev-dependencies]
serde_json = "1"


[features]
# Analyze Rust source files for type extraction
analyze = ["dep:syn", "dep:quote", "dep:proc-macro2"]

# Serve LSP
lsp = [
  "dep:tower-lsp",
  "dep:tokio",
  "dep:tree-sitter",
  "dep:ron-lsp-tree-sitter",
]
